@@ -1,5 +1,5 @@
 %-----------------------------------------
-%	$Id: GMT_Appendix_A.tex,v 1.31 2008-04-29 20:55:19 guru Exp $
+%	$Id: GMT_Appendix_A.tex,v 1.32 2008-10-03 21:04:15 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2008.
@@ -136,8 +136,9 @@ This package contains the tools \GMTprog{x2sys\_datalist},
 which allows you to extract data from almost any binary or ASCII
 data file, and \GMTprog{x2sys\_cross} which determines crossover
 locations and errors generated by one or several geospatial tracks.
-Newly added are the tools \GMTprog{x2sys\_init},  \GMTprog{x2sys\_binlist}, \GMTprog{x2sys\_put},
-and \GMTprog{x2sys\_get} which extends the track-management system
+Newly added are the tools \GMTprog{x2sys\_init},  \GMTprog{x2sys\_binlist},
+\GMTprog{x2sys\_get}, \GMTprog{x2sys\_list}, \GMTprog{x2sys\_put},
+\GMTprog{x2sys\_report} and \GMTprog{x2sys\_solve} which extends the track-management system
 employed by the mgg supplement to generic track data of any format.
 This package represents a new generation of tools intended to replace the old
 ``X\_SYSTEM'' crossover tools (below).  The package is maintained
