@@ -182,6 +182,8 @@ src/x2sys/x2sys_list.c
 src/x2sys/x2sys_list.1
 src/x2sys/x2sys_cross.c
 src/x2sys/x2sys_cross.1
+src/x2sys/x2sys_report.c
+src/x2sys/x2sys_report.1
 src/x2sys/x2sys_solve.c
 src/x2sys/x2sys_solve.1
 src/x2sys/x2sys_get.c
@@ -292,6 +294,7 @@ www/gmt/doc/html/x2sys_binlist.html
 www/gmt/doc/html/x2sys_datalist.html
 www/gmt/doc/html/x2sys_list.html
 www/gmt/doc/html/x2sys_cross.html
+www/gmt/doc/html/x2sys_report.html
 www/gmt/doc/html/x2sys_solve.html
 www/gmt/doc/html/x2sys_get.html
 www/gmt/doc/html/x2sys_init.html
