@@ -1,0 +1,61 @@
+#include "common_options.txt"
+.TH X2SYS_REPORT 1 MANDATE GMT_STRING "Generic Mapping Tools"
+.SH NAME
+x2sys_report \- Report statistics from crossover data base
+.SH SYNOPSIS
+\fBx2sys_report\fP OPT(C)\fIcolumn\fP OPT(T)\fITAG\fP [ \fIcoedbase.txt\fP ] 
+[ OPT(I)[\fIlist\fP] [ OPT(L)\fInx_min\fP ] [ OPT(Qe)|\fBi\fP ] [ GMT_Rgeo_OPT ] [ OPT(S)\fItrack\fP ] [ GMT_V_OPT ]
+.SH DESCRIPTION
+\fBx2sys_report\fP will read the crossover ascii data base \fIcoedbase.txt\fP (or \fIstdin\fP)
+and report on the statistics of crossovers (n, mean, stdev, rms) for each track.  Options are
+available to let you exclude tracks and limit the output.
+.TP
+.B \-C
+Specify which data column you want to process.  Crossovers related to this column name must be
+present in the crossover data base.
+.TP
+.B \-T
+\fITAG\fP is the unique tag name of this data type system.
+.SH OPTIONS
+No space between the option flag and the associated arguments.
+.TP
+.I coedbase.txt
+The name of the crossover error data base as produced by \fBx2sys_cross\fP.
+If not given we read standard input.
+.TP
+.B \-I
+Name of ascii file with a list of track names (one per record) that should be excluded from consideration
+[Default includes all tracks].
+.TP
+.B \-L
+Only report data from tracks involved in at least \fInx_min\fP crossovers [all tracks].
+.TP
+.B \-Q
+Append \fBe\fP for external crossovers or \fBi\fP for internal crossovers only [Default is external].
+#include "explain_-Rgeo.txt"
+.TP
+.B \-S
+Name of a single track.  If given we restrict output to those crossovers involving this track [Default
+output is crossovers involving any track pair].
+#include "explain_-V.txt"
+.SH EXAMPLES
+To report statistics of all the external magnetic crossovers associated with the tag mgd77 from the file COE_data.txt,
+restricted to occupy a certain region in the south Pacific, try
+.br
+.sp
+\fBx2sys_report\fP COE_data.txt \fB\-V \-T\fPmgd77 \fB\-R\fP180/240/-60/-30 \fB\-C\fPmag \fB\-F\fPxytz > mag_report.txt
+.br
+.sp
+To report on the faa crossovers globally that involves track 12345678, try
+.br
+.sp
+\fBx2sys_report\fP COE_data.txt \fB\-V \-T\fPmgd77 \fB\-C\fPfaa \fB\-S\fP12345678  > faa_report.txt
+.SH "SEE ALSO"
+.IR x2sys_binlist (1)
+.IR x2sys_cross (1)
+.IR x2sys_datalist (1)
+.IR x2sys_get (1)
+.IR x2sys_init (1)
+.IR x2sys_list (1)
+.IR x2sys_put (1)
+.IR x2sys_solve (1)
